css/style.css
.container {
    width: 548px;
    background: #eee;
    margin: 0 auto;
}
header {
    height: 200px;
    position: relative;
    background-color: #777;
}
.part1 {
    position: relative;
    border: 2px solid blue;
}

.fixed {
    position: relative;
    background-image: url(../img/Jumping1blankTiny.png);
    border: 2px solid red;
    height: 420px;
    background-size: auto 620px;
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-position: top center;
    overflow: hidden;
}


.jumper1 {
    background-image: url(../img/jumper1Tiny.png);
    background-position-x: 75%;
    background-position-y: 20%;
    width: 79px;
    height: 26px;
    background-repeat: no-repeat;
    position:absolute;
    top: 15%;
    right: 7%;
}

section {
    height: 1200px;
    z-index: 20;
    background-color: #777;
}

